--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ crashlytics-build.properties
 *.validationcache
 *.wsettings
 IncrementalSoundBankData.xml
+Assets/TextMesh Pro/Resources/Fonts & Materials/Geo.zip
+Assets/TextMesh Pro/Resources/Fonts & Materials/Geo.zip.meta
